# RefChecker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
benchmark/: README.md
benchmark/data/: download_data.sh  gather_benchmark_data.py
benchmark/evaluation/: autocheck.py  corr.py  evaluate.py
benchmark/response_collection/: README.md  chatglm3_6b.py  collector_base.py  gpt4_turbo.py  main.py
benchmark_data/: README.md
benchmark_data/noisy_context/: msmarco_example_ids.json
benchmark_data/zero_context/: nq_example_ids.json
bschecker/: __init__.py  aggregator.py  cli.py  utils.py
bschecker/checker/: README.md  checker_base.py  claude2_checker.py  gpt4_checker.py
bschecker/extractor/: README.md  claude2_extractor.py  extractor_base.py
bschecker/localizer/: __init__.py
bschecker/retriever/: __init__.py  google_retriever.py
demo/: README.md  main.py  miscellaneous.py
example/: check.sh  example_in.json  extract-check.sh  extract-check_wo_ref.sh  extract.sh
notebooks/: refchecker_usages.ipynb
refchecker/: __init__.py  aggregator.py  base.py  claim_utils.py  cli.py  utils.py
refchecker/checker/: README.md  __init__.py  checker_base.py  checker_prompts.py  claude2_checker.py  gpt4_checker.py  llm_checker.py  nli_checker.py
refchecker/extractor/: README.md  __init__.py  claude2_extractor.py  claude_extractor.py  extractor_base.py  extractor_prompts.py  gpt4_extractor.py  llm_extractor.py  mistral_extractor.py  mixtral_extractor.py
response_collection/: README.md  collector_base.py  gpt4_turbo.py  main.py  mistral.py
(+35 files in other folders)
