[tool.poetry]
name = "refchecker"
version = "0.1"
description = ""
authors = [
    "Xiangkun Hu <xiangkhu@amazon.com>",
    "Dongyu Ru <rudongyu@amazon.com>",
    "Qipeng Guo <gqipeng@amazon.com>",
    "Lin Qiu <quln@amazon.com>",
    "Zheng Zhang <zhaz@amazon.com>"
]
readme = "README.md"
licence = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.1"
boto3 = "^1.28.57"
torch = "^2.1"
transformers = "^4.34.0"
rank-bm25 = "^0.2.2"
beautifulsoup4 = "^4.12.2"
diskcache = "^5.6.3"
openai = "^1.3.5"
anthropic = "^0.7.4"
datasets = "^2.15.0"
plotly = "^5.18.0"
nltk = "^3.8.1"
pytorch_lightning = "^1.8"  # for alignscore
scikit-learn = "^1.3.2"
accelerate = "^0.26.1"
litellm = "^1.34.6"

# optional dependencies required by specific modules
scikit-learn-intelex = { version = "^2024.1.0", optional = true }
vllm = { version = "^0.3.3", optional = true }

[tool.poetry.extras]
repcex = ["scikit-learn-intelex"]
open-extractor = ["vllm"]

[tool.poetry.scripts]
refchecker-cli = "refchecker.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
